# RTA-GUARD

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  discus_rs_bridge.py  docker-compose.yml  live_test.py  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.openclaw/: workspace-state.json
brahmanda/: __init__.py  attribution.py  compliance.py  confidence.py  config.py  conscience.py  consistency_checker.py  cost_monitor.py  cost_report.py  efficient_ops.py  escalation.py  extractor.py  failover.py  ha.py  hallucination_checker.py  log_analyzer.py  logging_config.py  metrics.py  models.py  mutation.py  ner_detector.py  pipeline.py  profiles.py  qdrant_client.py  quotas.py  rate_limit.py  rbac.py  region.py  replication.py  restore.py  sla_monitor.py  sso.py  tamas.py  temporal.py  tenancy.py  test_attribution.py  test_compliance.py  test_confidence.py  test_conscience.py  test_cost.py  (+18 more)
config/: constitutional_framework.yaml  constitutional_rules.yaml  pii_patterns.yaml
dashboard/: app.py  auth.py  models.py  test_api_docs.py  ws_protocol.py
dashboard-ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
demo/: chat_demo.py  hybrid_demo.py  live_demo.py  llm_chat_demo.py
discus/: __init__.py  adaptive.py  analytics.py  content_moderator.py  guard.py  jailbreak_heuristics.py  llm.py  memory.py  models.py  nemo.py  nemo_wrapper.py  pii_masker.py  presidio_detector.py  profiles.py  redteam.py  rta_engine.py  rule_dsl.py  rules.py  streaming.py
discus-rs/: Cargo.toml  PERFORMANCE.md  build.sh
discus-rs/benchmarks/: bench.rs  compare.py
discus-rs/bindings/: .gitignore  BINDING_SPEC.md  README.md
discus-rs/bindings/c/: Makefile  discus.c  discus.h  test_discus.c
discus-rs/bindings/go/: discus.go  discus_test.go  go.mod
discus-rs/bindings/js/: package.json
discus-rs/bindings/js/src/: index.ts  types.ts
discus-rs/bindings/js/test/: test_bindings.ts
discus-rs/bindings/python/: Cargo.toml  __init__.py  pyproject.toml  test_python_bindings.py
discus-rs/bindings/python/src/: lib.rs
discus-rs/bindings/rust/: Cargo.toml
discus-rs/bindings/rust/src/: lib.rs
discus-rs/inject/: background.js  discus-guard.css  discus-guard.js  manifest.json
discus-rs/pkg/: discus_rs.d.ts  discus_rs.js  discus_rs.loader.js
discus-rs/scripts/: serve.py
discus-rs/src/: error.rs  guard.rs  lib.rs  models.rs  rta_engine.rs  rules.rs
discus-rs/src/wasi/: exports.rs  host.rs  mod.rs  wasi_bindings.rs
discus-rs/tests/: browser_test.html  test_browser_injection.py  test_wasi.py
docs/: ADMIN_GUIDE.md  BRAHMANDA-MAP-DRAFT.md  CICD.md  CONTRIBUTING.md  COST.md  DEPLOYMENT.md  FAQ.md  HA.md  LOCAL-SETUP.md  LOGGING.md  MISSION-CONTROL.html  MONITORING.md  NEMO_ANALYSIS.md  PHASE17.md  PHASES_FILE_MAP.md  PROJECT-PHASES.md  QDRANT-MIGRATION.md  RELEASE_PROCESS.md  ROADMAP-FUTURE.md  RTA-RULESET.md  TRAINING_README.md  USER_GUIDE.md
examples/: langchain_example.py  llamaindex_example.py
integrations/: __init__.py  base.py  detect.py
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml
logging/: elasticsearch.yml  kibana.yml  logstash.conf  pipeline.yml
memory/: 2026-03-26.md  2026-03-27.md  2026-03-28.md  CEO_report_2026-03-26.md  development_progress.json  file_management_audit_2026-03-26.md
mission-control/: index.html
monitoring/: alerts.yml  prometheus.yml
profiles/: base.yaml  finance.yaml  healthcare.yaml  public.yaml  rag-relaxed.yaml  rag-strict.yaml  relaxed.yaml  strict.yaml
scripts/: daily_report.py
showcase/: index.html
tests/: test_adaptive.py  test_analytics.py  test_crypto.py  test_deployment.py  test_discus.py  test_discus_rs.py  test_discus_rs_wasm.py  test_federation.py  (+12 more)
(+138 files in other folders)
