[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rta-guard"
version = "2.0.0"
description = "The Last Line of Defense for AI Agents — constitutional AI governance with 13 Vedic rules"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "RTA-GUARD Team"},
]
keywords = ["ai-safety", "llm-security", "guardrails", "agent-security", "constitutional-ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "fastapi>=0.100",
    "uvicorn>=0.24",
]

[project.optional-dependencies]
full = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.5",
    "cryptography>=41.0",
    "numpy>=1.24",
    "httpx>=0.25",
    "qdrant-client>=1.7",
]
langchain = [
    "langchain>=0.1",
    "langchain-core>=0.1",
]
llamaindex = [
    "llama-index-core>=0.10",
]
all = [
    "rta-guard[full,langchain,llamaindex]",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/ashish797/RTA-GUARD"
Documentation = "https://github.com/ashish797/RTA-GUARD/tree/master/docs"
Repository = "https://github.com/ashish797/RTA-GUARD"

[tool.setuptools.packages.find]
include = ["discus*", "brahmanda*", "integrations*", "dashboard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.python"
