[package]
name = "discus-rs"
version = "0.1.0"
edition = "2021"
authors = ["RTA-GUARD Team"]
description = "Discus kill-switch — deterministic AI session terminator (Rust core)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
regex = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"

[dev-dependencies]
assert-json-diff = "2.0"

[profile.release]
lto = true
opt-level = "s"
