[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "discus-rs"
version = "0.1.0"
description = "RTA-GUARD Discus — Deterministic AI session kill-switch (Rust-backed)"
readme = "../README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["ai-safety", "guardrail", "kill-switch", "rti-guard"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Libraries",
]

[project.urls]
Homepage = "https://github.com/rta-guard/discus-rs"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "discus_rs._native"
