[package]
name = "discus-bindings"
version = "0.1.0"
edition = "2021"
description = "RTA-GUARD Discus — Public API wrapper for discus-rs"
license = "MIT"
repository = "https://github.com/rta-guard/discus-rs"

[dependencies]
discus-rs = { path = "../../" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
